More Number.valueOf uses.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@672798 13f79535-47bb-0310-9956-ffa450edef68